# invoice_validator

./: .gitignore  README.md  pyproject.toml
src/assets/: historical_decisions.jsonl
src/assets/docs/: MOCK_API.md
src/assets/invoices/: samplejson.json
src/assets/master_data/: company_policy.yaml  gst_rates_schedule.csv  hsn_sac_codes.json  tds_sections.json  vendor_registry.json
src/invoice_validator/: crew.py  main.py
src/invoice_validator/config/: agents.yaml  tasks.yaml
src/invoice_validator/models/: invoice_schema.py
src/invoice_validator/tools/: document_loader.py  invoice_extractor.py  raw_text_extractor_tool.py  validation_tool.py
src/invoice_validator/utils/: callbacks.py  logger.py
tests/: PDF_IMAGE_OCR.ipynb
